# tarigpuminer

./: .gitignore  README.md
.github/workflows/: build_binaries.yml
src/miner/: Cargo.toml
src/miner/cuda/: keccak.ptx
src/miner/src/: config_file.rs  main.rs  node_client.rs  tari_coinbase.rs
