[package]
name = "xtrgpuminer"
version = "0.1.4"
edition = "2021"


[dependencies]
tari_core = { git = "https://github.com/tari-project/tari", tag = "v1.0.0-rc.6", default-features = false, features = [
    "transactions",
] }
minotari_app_grpc = { git = "http://github.com/tari-project/tari", tag = "v1.0.0-rc.6" }
tari_common_types = { git = "http://github.com/tari-project/tari", tag = "v1.0.0-rc.6" }
tari_common = { git = "http://github.com/tari-project/tari", tag = "v1.0.0-rc.6" }
tari_script = { git = "http://github.com/tari-project/tari", tag = "v1.0.0-rc.6" }
tari_key_manager = { git = "http://github.com/tari-project/tari", tag = "v1.0.0-rc.6" }
tari_crypto = { version = "0.20", features = ["borsh"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
anyhow = "*"
clap = { version = "4.5.0", features = ["derive"] }
sha3 = "0.10"
num-format = "0.4.4"

tokio = { version = "1.36", features = ["full"] }
tonic = { version = "0.8.3" }
prost = "0.11.9"
prost-types = "0.11.9"
rand = "0.8"
libsqlite3-sys = { version = "0.25.1", features = ["bundled"] }

cust = "0.3.2"
